--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 $black: #232323;
-$background: #ffdf8c;
+$background: #ffffff;
 $gray-line: #f6f6f6;
-$orange: #fe5f1e;
+$orange: #fe951e;
 
 $container-width: 90%;
 
