--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
-@import './variables';
-@import './libs/normalize';
+@import "./variables";
+@import "./libs/normalize";
 
-@import './components/all';
+@import "./components/all";
 
 body {
 	background-color: $background;
@@ -11,7 +11,7 @@ body {
 	width: calc(100vw - 100px);
 	height: 100%;
 	background-color: #fff;
-	margin: 50px auto;
+	margin: 0 auto;
 	border-radius: 10px;
 	max-width: 1400px;
 
@@ -104,6 +104,187 @@ body {
 		margin: 90px auto;
 		.content__title {
 			margin: 0;
+		}
+	}
+
+	&--fullPizza {
+		.pizza-block {
+			display: flex;
+			width: 100%;
+			text-align: center;
+			margin-bottom: 65px;
+
+			&_left,
+			&_right {
+				flex-direction: column;
+			}
+
+			&_left {
+				flex: 3;
+				a {
+					display: flex;
+				}
+			}
+
+			&_right {
+				flex: 2;
+				padding: 20px;
+				display: grid;
+				align-content: space-evenly;
+
+				h2 {
+					font-size: 24px;
+				}
+
+				p {
+					margin-top: 30px;
+					text-align: left;
+					line-height: 1.5em;
+				}
+			}
+
+			&-wrapper {
+				display: flex;
+				justify-content: center;
+			}
+
+			&__image {
+				width: 100%;
+			}
+
+			&__title {
+				font-size: 40px;
+				font-weight: 900;
+				letter-spacing: 1%;
+				margin-bottom: 20px;
+			}
+
+			&__info {
+				text-align: left;
+				.nutritional {
+					margin-bottom: 10px;
+
+					.col {
+						width: 100%;
+						padding: 0 0 30px 0;
+
+						float: left;
+						box-sizing: border-box;
+
+						.pdp-row {
+							overflow: hidden;
+							padding: 8px 0 0;
+							position: relative;
+							&::after {
+								width: 100%;
+								height: 1px;
+								border-top: 1px dotted #c8c8c8;
+								position: absolute;
+								bottom: 3px;
+								left: 0;
+								content: "";
+							}
+
+							span {
+								&:first-child {
+									float: left;
+									position: relative;
+									z-index: 1;
+									max-width: 42%;
+									padding-right: 3px;
+									overflow: hidden;
+									text-overflow: ellipsis;
+									white-space: nowrap;
+									background: #fff;
+								}
+
+								&:nth-child(2) {
+									z-index: 1;
+									float: right;
+									padding: 0 0 0 3px;
+									width: 80px;
+									position: relative;
+									background: #fff;
+								}
+							}
+						}
+					}
+				}
+			}
+
+			&__selector {
+				display: flex;
+				background-color: #f3f3f3;
+				border-radius: 10px;
+				flex-direction: column;
+				padding: 6px;
+
+				ul {
+					display: flex;
+					flex: 1;
+
+					&:first-of-type {
+						margin-bottom: 6px;
+					}
+
+					li {
+						padding: 8px;
+						flex: 1;
+						cursor: pointer;
+						font-weight: 600;
+						font-size: 16px;
+						line-height: 28px;
+						@include noselect();
+						&.active {
+							background: #ffffff;
+							box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
+							border-radius: 5px;
+							cursor: auto;
+						}
+					}
+				}
+			}
+
+			&__bottom {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				margin-top: 20px;
+
+				button {
+					flex: 2;
+				}
+			}
+
+			&__price {
+				font-weight: bold;
+				font-size: 24px;
+				line-height: 27px;
+				letter-spacing: 0.015em;
+			}
+
+			&__weight {
+				flex: 1;
+			}
+		}
+
+		.button {
+			&--add {
+				justify-content: center;
+				span {
+					font-weight: 600;
+					font-size: 18px;
+					line-height: 28px;
+				}
+
+				i {
+					width: 30px;
+					height: 30px;
+					font-style: normal;
+					font-size: 16px;
+					line-height: 30px;
+				}
+			}
 		}
 	}
 }
@@ -289,6 +470,10 @@ body {
 					background-color: darken($color: $gray-line, $amount: 80);
 				}
 			}
+		}
+
+		a {
+			display: contents;
 		}
 	}
 
