--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@import "../variables";
 
 .button {
 	display: inline-block;
@@ -96,13 +96,18 @@
 	}
 
 	&--add {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
 		svg {
-			margin-right: 2px;
+			margin-right: 5px;
 		}
 
 		span {
 			font-weight: 600;
-			font-size: 16px;
+			font-size: 14px;
+			line-height: 22px;
 		}
 
 		&:hover {
