--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@import "../variables";
 
 .categories {
 	ul {
@@ -6,9 +6,10 @@
 
 		li {
 			background-color: #f9f9f9;
-			padding: 13px 30px;
-			border-radius: 30px;
+			padding: 13px 15px;
+			border-radius: 15px;
 			margin-right: 10px;
+			font-size: 14px;
 			font-weight: bold;
 			cursor: pointer;
 			transition: background-color 0.1s ease-in-out;
