--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,5 @@
 .root {
 	position: relative;
-	left: -120px;
 }
 
 .input {
@@ -37,5 +36,27 @@
 
 	&:hover {
 		opacity: 0.8;
+	}
+}
+
+@media screen and (max-width: 1200px) {
+	.input {
+		width: 25vw;
+	}
+}
+
+@media screen and (max-width: 820px) {
+	.root {
+		width: 100%;
+	}
+
+	.input {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 540px) {
+	.root {
+		order: 1;
 	}
 }
