--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -57,39 +57,24 @@ body {
 		align-items: center;
 		justify-content: space-between;
 
-		@media (max-width: 1260px) {
+		@media (max-width: 1300px) {
 			.categories {
 				width: 100%;
-				overflow: auto;
-
-				ul {
-					width: 785px;
-				}
 			}
 
 			.sort {
 				padding-left: 20px;
-				b {
-					display: none;
-				}
 			}
 		}
 
-		@media (max-width: 760px) {
-			.categories {
-				ul {
-					li {
-						padding: 8px 20px;
-					}
-				}
-			}
-		}
+		@media (max-width: 540px) {
+			gap: 20px;
+			flex-direction: column;
+			justify-content: flex-start;
 
-		@media (max-width: 820px) {
-			flex-direction: column-reverse;
-
-			.categories {
-				margin-top: 30px;
+			.sort {
+				align-self: flex-start;
+				padding-left: 0;
 			}
 		}
 	}
@@ -104,6 +89,14 @@ body {
 		margin: 90px auto;
 		.content__title {
 			margin: 0;
+		}
+
+		@media screen and (max-width: 960px) {
+			margin: 20px auto;
+		}
+
+		@media screen and (max-width: 540px) {
+			margin: 0 auto;
 		}
 	}
 
@@ -283,6 +276,69 @@ body {
 					font-style: normal;
 					font-size: 16px;
 					line-height: 30px;
+				}
+			}
+		}
+
+		@media screen and (max-width: 1200px) {
+			.pizza-block {
+				&__title {
+					font-size: 3vw;
+				}
+
+				&_right {
+					h2 {
+						font-size: 1.75vw;
+					}
+				}
+			}
+		}
+
+		@media screen and (max-width: 1020px) {
+			.pizza-block {
+				flex-direction: column;
+
+				&__title {
+					font-size: 4vw;
+				}
+
+				&_right {
+					h2 {
+						font-size: 2.4vw;
+					}
+				}
+			}
+		}
+
+		@media screen and (max-width: 760px) {
+			.pizza-block {
+				flex-direction: column;
+
+				&__title {
+					font-size: 6vw;
+				}
+
+				&_right {
+					h2 {
+						font-size: 3vw;
+					}
+				}
+			}
+		}
+
+		@media screen and (max-width: 540px) {
+			.pizza-block {
+				flex-direction: column;
+
+				&__title {
+					font-size: 6vw;
+				}
+
+				&_right {
+					padding: 0;
+					h2 {
+						font-size: 4vw;
+					}
 				}
 			}
 		}
@@ -577,5 +633,145 @@ body {
 			font-weight: 600;
 			font-size: 18px;
 		}
+	}
+
+	.button {
+		span {
+			font-size: 15px;
+		}
+	}
+
+	@media screen and (max-width: 960px) {
+		&__item {
+			display: grid;
+			grid-template:
+				"img info info remove" 120px
+				"count price price ." 1fr;
+			gap: 20px 10px;
+
+			&-img {
+				grid-area: img;
+				width: 100%;
+
+				img {
+					width: auto;
+					height: 100%;
+				}
+			}
+
+			&-info {
+				grid-area: info;
+				width: 100%;
+			}
+
+			&-count {
+				grid-area: count;
+				width: 15vw;
+				gap: 10px;
+			}
+
+			&-price {
+				grid-area: price;
+				width: 100%;
+				justify-content: flex-start;
+			}
+
+			&-remove {
+				grid-area: remove;
+				width: 100%;
+			}
+		}
+
+		&__bottom {
+			margin: 50px 0;
+
+			&-details {
+				flex-direction: column;
+				gap: 10px;
+			}
+
+			&-buttons {
+				gap: 10px;
+			}
+		}
+
+		&--empty {
+			margin: 40px auto;
+			width: 100%;
+			text-align: center;
+		}
+	}
+
+	@media screen and (max-width: 540px) {
+		&__top {
+			gap: 20px;
+			flex-direction: column;
+			text-align: left;
+
+			h2,
+			.cart__clear {
+				width: 100%;
+			}
+		}
+
+		&__item {
+			display: grid;
+			grid-template:
+				"img img img remove" 200px
+				"info info info ." 1fr
+				"count . . price" 1fr;
+			gap: 15px 10px;
+
+			&-img {
+				grid-area: img;
+				width: 100%;
+			}
+
+			&-info {
+				grid-area: info;
+				width: 100%;
+			}
+
+			&-count {
+				grid-area: count;
+			}
+
+			&-price {
+				grid-area: price;
+				width: 100%;
+				justify-content: flex-end;
+
+				b {
+					white-space: nowrap;
+				}
+			}
+
+			&-remove {
+				grid-area: remove;
+				width: 100%;
+			}
+		}
+
+		&--empty {
+			margin: 0 auto;
+			h2 {
+				font-size: 24px;
+			}
+
+			p {
+				font-size: 14px;
+			}
+
+			img {
+				width: 70%;
+				margin-bottom: 45px;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 540px) {
+	.content {
+		padding-bottom: 0;
 	}
 }
